Avoid scrollbars appearing with some animations

--- a/css/creative.css
+++ b/css/creative.css
@@ -12,6 +12,7 @@ body {
 
 body {
     font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
+    overflow-x: hidden;
 }
 
 hr {
